Lexing/test_cases/bad/whitespace-illegal-char.cl
(* several illegals separated by whitespace *)
	# $ !

